<resources>
    <!--Application-->
    <string name="app_name">My goals</string>

    <!--Goal item resources-->
    <string name="goal_item_action_delete">Delete</string>
    <string name="goal_item_action_archive">Archive</string>
    <string name="goal_item_completed">Completed</string>

    <!--Add dialog resources-->
    <string name="goal_dialog_title">Add new goal</string>
    <string name="goal_dialog_message">What is your goal?</string>

    <string name="dialog_title_hint">Title</string>
    <string name="dialog_desc_hint">Description</string>
    <string name="dialog_error_message">Title cannot be empty!</string>
    <string name="dialog_ok">Add</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="undo_action">UNDO</string>
    <string name="delete">Delete</string>
    <string name="stages_title_text">Stages</string>
    <string name="goal_item_done_desc">Done</string>
    <string name="add_desc">Add</string>
    <string name="delete_desc">Delete</string>
    <string name="stage_dialog_title">Add new stage</string>
    <string name="stage_dialog_message">What stage?</string>
    <string name="goals_list_empty_text">Goal list is empty!\nClick + button to add one</string>
    <string name="stages_list_empty_text">Stages list is empty!\nClick + button to add one</string>
    <string name="stages_editing_title">Edit</string>
    <string name="sort_title_text">Sort by:</string>

    <string-array name="sort_entries">
        <item name="date_desc">date</item>
        <item name="date_asc">date</item>
        <item name="title_desc">title</item>
        <item name="title_asc">title</item>
    </string-array>

</resources>
